<resources>
    <string name="app_name">MeetMinus</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>


    <string name="titleCaps">MEETMINUS</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Account">Or, if you don\'t have an account,</string>
    <string name="SignUpMessage">Please enter your email, username, and password.</string>
    <string name="user_wants_to_connect">%s is close by</string>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>


</resources>
