<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/request_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_wants_to_connect"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_action"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>


        <Button
            android:id="@+id/allow_action"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/allow"/>

    </LinearLayout>

</LinearLayout>