<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:backgroundTint="@color/BGSignUp"

    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingVertical="20px">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:text="@string/titleCaps"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"


        tools:textColor="@android:color/holo_blue_dark" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="22dp"
        android:text="@string/SignUpMessage"
        android:textAlignment="center"
        android:textColor="@color/secondaryText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp"
        android:text="@string/SignUp"
        android:textColor="?android:attr/colorBackgroundFloating"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="209dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/borderColor"
        android:ems="10"
        android:hint="Email"
        android:singleLine="true"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textColorHint="@color/secondaryText" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username"
        android:backgroundTint="@color/borderColor"
        android:color="@color/borderColor"
        android:ems="10"
        android:hint="Pasword"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textColorHint="@color/secondaryText" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/borderColor"
        android:ems="10"
        android:hint="Phone number"
        android:singleLine="true"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textColorHint="@color/secondaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:backgroundTint="@color/borderColor"
        android:ems="10"
        android:hint="Name"
        android:singleLine="true"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textColorHint="@color/secondaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/number"
        android:backgroundTint="@color/borderColor"
        android:ems="10"
        android:hint="Username"
        android:singleLine="true"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textColorHint="@color/secondaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />


</RelativeLayout>